Fix scrollbar on windows

--- a/style.css
+++ b/style.css
@@ -9,3 +9,7 @@ canvas {
   -webkit-filter: url('#goo');
   opacity: .6;
 }
+
+.columns {
+  margin-right: 0;
+}
